--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -107,14 +107,21 @@ header {
 
   .categoryHead {
     display: block;
-    padding: 20px 0 20px 50px;
+    padding: 15px 0 15px 50px;
     background-color: #000;
-    font-weight: 900;
-    font-size: 18px;
-    color: #fff;
     line-height: 0em;
+    a {
+      padding-right: 24px;
+      font-weight: 900;
+      font-size: 18px;
+      color: #fff;
+      border: none;
+      cursor: pointer;
+    }
+
   }
 
+  
 }
 
 #content {
