--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,17 +36,15 @@
 
   <div id="container">
     <% unless @no_header %>
-      <% if @category %>
-        <div class="categoryHead">
-          <%= link_to @category.name, category_list_path(@category.name) %>
-        </div>
-      <% else %>
-        <div class="categoryHead">
-          <% @categories.each do |category| %>
+      <div class="categoryHead">
+        <% @categories.each do |category| %>
+          <% if @category && !(category.name.eql? @category.name)  %>
             <%= link_to category.name, category_list_path(category.name) %>
+          <%else%>
+            <%= link_to category.name, category_list_path(category.name), class: "categoryOn" %>
           <% end %>
-        </div>
-      <% end %>
+        <% end %>
+      </div>
       <time><% if @post && @post.created_at %>Posted <%= @post.created_at.to_formatted_s(:day_month_year) %><% else %><%= Time.now.to_formatted_s(:day_month_year) %><% end %></time>
     <% end %>
     <div id="content">
