--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -2,7 +2,7 @@
 /* TODO: pull out coloring into variables */
 $linkhover: red;
 
-div:before, div:after {content:''; display:table;}
+div:before, div:after {content:''; display:table; }
 
 aside {position:relative; display:block;}
 ul {list-style-type:none;}
@@ -160,7 +160,8 @@ code {
 }
 
 .contain {
-  width: 600px;
+  
+  width: 60%;
   position: relative;
 }
 
@@ -251,7 +252,7 @@ code {
 }
 
 .button.space-top {
-  margin-top: 100px;
+  margin-top: 50px;
 }
 
 .left {
@@ -537,9 +538,9 @@ form .permalink {
   }
 
   #post-editor {
-    margin-left: -25%;
-    left: 50%;
-    width: 600px;
+    margin-left: -20%;
+    left: 40%;
+    width: 40%;
   }
 }
 
@@ -588,6 +589,12 @@ nav.pagination {
   padding: 0;
 }
 
-  nav.pagination a {
-    margin-left: 10px;
-  }
+nav.pagination a {
+  margin-left: 10px;
+}
+
+.fb-comments {
+  border-top:1px solid #ddd;
+  margin-top:30px;
+  padding: 40px 0px 0px 0px;
+}
