--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -6,7 +6,7 @@
         <%= link_to '⚓', post.slug, :class => 'permalink' %>
       </h1>
     <%- else -%>
-      <h1><% if @single_post %><%= post.title %><% else %><%= link_to post.title, post.slug %><% end %></h1>
+      <h1><% if @single_post %><%= post.title %><% else %><%= link_to post.title, "/#{post.slug}/" %><% end %></h1>
     <%- end -%>
 
     <% if post.has_more_tag && !@single_post && !@preview %>
@@ -22,6 +22,6 @@
       </ul>
     <%- end -%>
   </div>
-
-  <% if @single_post %><a class="button space-top" href="<%= root_url %>">Back to Blog</a><% end %>
+  <%= if @single_post then render :partial => "posts/comment" end %>
+  <% if @single_post %><a class="button space-top" href="<%= root_url %>categories/<%=@category.name%>">Back to <%= @category.name %></a><% end %>
 </section>
