admin page category display

--- a/app/views/posts/admin.html.erb
+++ b/app/views/posts/admin.html.erb
@@ -1,8 +1,8 @@
 <div id="drafts" class="col">
   <h1>Drafts <%= link_to 'New Draft', '/new', :class => 'button' %></h1>
-  <%= form_for @post do |f| %>
-    <%= f.text_field :title, :placeholder => 'Start typing your title here...' %>
-  <% end %>
+  <%#= form_for @post do |f| %>
+    <%#= f.text_field :title, :placeholder => 'Start typing your title here...' %>
+  <%# end %>
   <ul>
   <%= render :partial => 'li', :collection => @drafts %>
   </ul>
