--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -11,11 +11,14 @@
 
     <% if post.has_more_tag && !@single_post && !@preview %>
       <% if post.excerpt %><%= markdown(post.excerpt).to_html.html_safe %><% end %>
-	    <%= link_to "Continue Reading →", post.slug, :class => "button" %>
+      <%= link_to "Continue Reading →", post.slug, :class => "button" %>
     <% else %>
-      <% if post.content %><%= markdown(post.content).to_html.html_safe %><% end %>
+      <% if post.content && @single_post%>
+        <%= markdown(post.content).to_html.html_safe%>
+      <% elsif post.content%>
+        <%= markdown(post.content.lines.to_a[0...3].join).to_html.html_safe%>
+      <% end %>
     <% end %>
-
     <%- if is_admin? -%>
       <ul class="actions">
         <li><%= link_to 'Edit', '/edit/' + post.id.to_s unless @preview %></li>
