Edit view shows preview, youtube extention tag started with "^^http://youtube.be"

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,11 @@
       <li><%= link_to 'rss feed', '/posts.rss' %></li>
     </ul>
     <span class="powered-by">
-      Powered by <a href="http://github.com/natew/obtvse.git">Obtvse</a>
+      Powered by<br/> 
+      <a href="http://github.com/natew/obtvse.git">Obtvse,</a>
+      <a href="http://softwaremaniacs.org/soft/highlight/en/">highlight.js,</a>
+      <a href="http://jmblog.github.com/color-themes-for-highlightjs/">theme</a><br/>
+
       <% if is_admin? %> &nbsp;&middot;&nbsp; <a href="/admin">Admin</a><% end %>
   </span>
 
