remove edit preview button

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -54,7 +54,7 @@
       <div class="right">
         <%= f.label :draft %>
         <%= f.check_box :draft %>
-        <%= f.submit 'Preview', :id => 'preview-button', :preview => true, :target => "_blank" %>
+        <%#= f.submit 'Preview', :id => 'preview-button', :preview => true, :target => "_blank" %>
         <%= f.submit 'Save', :id => 'save-button' %>
       </div>
     </div>
