--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -97,15 +97,14 @@ header {
 
   #mobileHeader {
     display: none;
-    padding: 5px 0 5px 20px;
-    line-height: 1em;
+    padding: 20px 0 10px 40px;
     font-weight: 900;
-    font-size: 18px;
+    font-size: 64px;
     img {
       display: inline-block;
-      width: 24px;
-      height: 24px;
-      margin-top: -1px;
+      width: 72px;
+      height: 72px;
+      margin-top: 3px;
       vertical-align: text-top;
     }
   }
@@ -142,22 +141,45 @@ header {
 
 }
 
-@media (max-width: 767px) {
+@media (max-device-width: 640px) {
+  #content {
+    font-size: 2.5em;
+    line-height: 2.5em;
+  }
+
   header {
     display: none;
   }
 
   #container { 
     margin-left:0px;
+    .categoryHead {
+      line-height: 3em;
+      a { 
+        font-size: 3em;
+      }
+
+    }
+
+    time {
+      font-size: 2em;
+      line-height: 1em;
+    }
+    
     .contain {
       width: 90%;
+      h1 {
+        font-size: 2em;
+      }
     }  
     
     #mobileHeader {
       display: block;
     }
   }
-} 
+
+}
+
 #content {
   section {
     padding: 26px 0 40px 50px;
