--- a/app/views/application/_youtube.html.erb
+++ b/app/views/application/_youtube.html.erb
@@ -1,7 +1,20 @@
-<div class="youtube_video">
-  <object width="640" height="365">
-    <param name="movie" value="http://www.youtube.com/v/<%= video %>&hl=en"></param>
-    <param name="wmode" value="transparent"></param>
-    <embed src="http://www.youtube.com/v/<%= video %>&hl=en" type="application/x-shockwave-flash" wmode="transparent" width="640" height="365"></embed>
-  </object>
-</div>
+<div id="ytplayer"></div>
+
+<script>
+  // Load the IFrame Player API code asynchronously.
+  var tag = document.createElement('script');
+  tag.src = "https://www.youtube.com/player_api";
+  var firstScriptTag = document.getElementsByTagName('script')[0];
+  firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+
+  // Replace the 'ytplayer' element with an <iframe> and
+  // YouTube player after the API code downloads.
+  var player;
+  function onYouTubePlayerAPIReady() {
+    player = new YT.Player('ytplayer', {
+      height: '365',
+      width: '640',
+      videoId: '<%=video%>'
+    });
+  }
+</script>
