add powered by toc, and sitemap ignore

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,8 +30,9 @@
       Powered by<br/> 
       <a href="http://github.com/natew/obtvse.git">Obtvse,</a>
       <a href="http://softwaremaniacs.org/soft/highlight/en/">highlight.js,</a>
-      <a href="http://jmblog.github.com/color-themes-for-highlightjs/">theme</a><br/>
-
+      <a href="http://jmblog.github.com/color-themes-for-highlightjs/">theme</a>
+      <a href="http://projects.jga.me/toc/">toc</a>
+      <hr/>
       <% if is_admin? %> &nbsp;&middot;&nbsp; <a href="/admin">Admin</a><% end %>
     </span>
 
