--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,9 +32,10 @@
       <a href="http://softwaremaniacs.org/soft/highlight/en/">highlight.js,</a>
       <a href="http://jmblog.github.com/color-themes-for-highlightjs/">theme</a>
       <a href="http://projects.jga.me/toc/">toc</a>
-      <hr/>
       <% if is_admin? %> &nbsp;&middot;&nbsp; <a href="/admin">Admin</a><% end %>
+      <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/3.0/us/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-nc-nd/3.0/us/80x15.png" /></a>
     </span>
+
 
   </header>
   <% end %>
