--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -27,6 +27,7 @@
       </ul>
     <%- end -%>
 
+    <%= if @single_post then render :partial => "application/sociable", :locals => { :post => post } end %>
     <%= if @single_post then render :partial => "posts/comment" end %>
   </div>
   <% if @single_post %><a class="button space-top" href="<%= root_url %>categories/<%=@category.name%>">Back to <%= @category.name %></a><% end %>
