--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -733,6 +733,7 @@ nav.pagination a {
 //sociable
 .sociable {
   padding-top: 30px;
+  padding-bottom: 20px;
   .fb-like {
     display: inline-block;
     padding: 0 5px 0 5px;
