--- a/app/views/posts/_li.html.erb
+++ b/app/views/posts/_li.html.erb
@@ -1,6 +1,6 @@
 <li id="post-<%= li.id %>">
   <h3>
-    <%= link_to "#{li.category.name} / #{li.title}", '/edit/' + li.to_s %>
+    <%= link_to "#{li.category.name} / #{li.title}", "/edit/#{li.id}" %>
     <span class="links">
       <%= link_to 'view', li.slug, :class => 'admin-view' %>
       <%= link_to 'x', li, data: { confirm: 'Are you sure?'}, :method => :delete, :class => 'admin-delete' %>
