chat branch stop

--- a/app/views/chat/index.html.erb
+++ b/app/views/chat/index.html.erb
@@ -1,6 +1,8 @@
-
+<%= javascript_include_tag 'chat' %>
 <br />
 <input id="chat" type=text name="message" size="30" /><input type="button" name="message_send" id="message_send" value="send" />
 <div>
-  <ul id="chat_window" ></ul>
+  <pre>
+    <code id="chat_window"></code>
+  </pre>
 </div>
